--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Color Picker</title>
     <link rel="stylesheet" type="text/css" href="colour.css" />
+    <script src="jscolour.js" defer></script>
   </head>
   <body>
     <div class="picker">
@@ -25,7 +26,6 @@
       </div>
       <div id="rgbColor" class="color-display"></div>
     </div>
-
     <div class="picker">
       <h2>LCH Color Picker</h2>
       <!-- Bruk egendefinerte slider-elementer med gradient bakgrunn -->
@@ -46,6 +46,5 @@
       </div>
       <div id="lchColor" class="color-display"></div>
     </div>
-    <script src="jscolour.js"></script>
   </body>
 </html>
